hphp/hack/test/typecheck/reactive/test_mutable_async.php
<?hh // strict

class Test {
  public function __construct(public int $val) {}
}

class Another {
  <<__Rx, __Mutable>>
  public async function foo(int $x, int $y): Awaitable<void> {}
}
